fix up some spacing

--- a/src/Content/newMobilePaneIosFrame.css
+++ b/src/Content/newMobilePaneIosFrame.css
@@ -204,3 +204,35 @@ a.tab-link {
 .diagnostics-section .list {
     margin-bottom: 0;
 }
+
+.diagnostics-accordion {
+    margin-bottom: 0;
+}
+
+.diagnostics-accordion .accordion-item-content {
+    padding: 0;
+}
+
+.diagnostics-accordion .diagnostic-content {
+    margin: 10px;
+    padding-bottom: 0;
+}
+
+.diagnostics-accordion .violation-card {
+    padding: 10px;
+    margin: 5px 0;
+}
+
+.diagnostics-accordion .violation-details {
+    margin-bottom: 0;
+    padding-bottom: 0;
+}
+
+.diagnostics-accordion .violation-rule {
+    padding-bottom: 0;
+    margin-bottom: 0;
+}
+
+#orig-headers-ui {
+    margin-top: 0;
+}
